[gd_scene load_steps=3 format=3 uid="uid://b478wmoj0ca8i"]

[ext_resource type="LabelSettings" uid="uid://cw16x1swnwp6c" path="res://interfaces/label_settings.tres" id="1_31x0g"]
[ext_resource type="Script" path="res://scripts/main_ui.gd" id="1_bsssl"]

[node name="main_ui" type="CanvasLayer"]
script = ExtResource("1_bsssl")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.025
anchor_top = 0.025
anchor_right = 0.025
anchor_bottom = 0.037
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 2
offset_right = 33.0
offset_bottom = 50.0

[node name="ContainerBuyer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="LabelBuyer" type="Label" parent="Control/VBoxContainer/ContainerBuyer"]
layout_mode = 2
text = "Buyer"
label_settings = ExtResource("1_31x0g")

[node name="CounterBuyer" type="Label" parent="Control/VBoxContainer/ContainerBuyer"]
layout_mode = 2
text = "0"
label_settings = ExtResource("1_31x0g")
horizontal_alignment = 2

[node name="ContainerSeller" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 17

[node name="LabelSeller" type="Label" parent="Control/VBoxContainer/ContainerSeller"]
layout_mode = 2
text = "Seller"
label_settings = ExtResource("1_31x0g")

[node name="CounterSeller" type="Label" parent="Control/VBoxContainer/ContainerSeller"]
layout_mode = 2
text = "0"
label_settings = ExtResource("1_31x0g")
horizontal_alignment = 2
